static/css/gmjosack.css
body {

    /* Background image comes from http://subtlepatterns.com/
     * and is CC BY-SA 3.0 - Subtle Patterns © Atle Mo.
     *
     * http://subtlepatterns.com/skulls/
     */
    background-image:url("/static/images/skulls/skulls.png");

    /* Force scrollbar so collapsed divs don't jerk
     * the page around when they grow larger than
     * the page.
     */
    overflow-y: scroll;
    margin: 0;
    color: #191919;
    font: 400 14px/20px "Open Sans", sans-serif;
}

body a {
    font-weight: 700;
}

html, body {
    height: 100%;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    color: #333;
}

h1 {
    line-height: 1.5em;
    border-bottom: 2px solid rgb(221, 221, 221);
    margin-bottom: 20px;
    margin-top: 20px;
}

.container {
    min-height: 100%;
    background: white;
    padding-bottom: 40px;
    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.header-separator {
    margin: 0;
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.nav {
    text-align: center;
}

.nav li {
    display: inline-block;
    margin: 0 6px;
    padding: 20px 0;

    line-height: 20px;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-weight: 600;
}

.nav li.ext-badge {
    margin: 0;
}

.nav li a:hover {
    background: 0 0;
}

.nav>li {
    position: relative;
}

.nav li a {
    position: relative;
    color: #141414;
    padding: 0 2px;
    padding-bottom: 1px;
    border-bottom: 2px solid transparent;
}

.nav li.active a, .nav li.page a:hover {
    border-bottom: 2px solid #141414;
}

.vertical-divider {
    border-left: 1px solid #38546d;
    border-right: 1px solid #16222c;
    display: inline-block;
    height: 10px;
}

/*
 * Resume
 */
.resume li {
    display: block;
}

.resume .roles {
    margin-bottom: 10px;
}

.resume .job {
    border-bottom: 2px solid rgb(221, 221, 221);
}

.resume .company {
    font-weight: bold;
    font-size: 1.4em;
}

.resume .job-dates {
    float: right;
    font-style: italic;
}

.resume .title-dates {
    float: right;
    font-style: italic;
    padding-right: 20px;
}


/*
 * Posts
 */

.posts li.post {
    display: block;
    font-size: 1.2em;
    padding-bottom: 10px;
}

.highlight pre {
    border-radius: 0;
    background-color: transparent;
    font-size: 1em;
    font-family:
        "Source Code Pro",
        Menlo,
        Monaco,
        Consolas,
        "DejaVu Sans Mono",
        Inconsolata,
        monospace;
    color: #fff;
    overflow: auto;
    word-wrap: normal;
    word-break: normal;
}

.youtube-video {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 25px;
    height: 0;
    overflow: hidden;
}

.youtube-video iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.video-container {
    max-height: 345px;
    max-width: 420px;
}

